2014-06-06  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* X3DChildObject.cpp:
	* X3DFieldDefinition.h:
	* X3DFieldDefinition.cpp:
	* FontConfig.cpp:
	* X3DChildNode.h:
	* RenderingProperties.cpp:
	* ClipPlane.h:
	* X3DLightNode.h:
	* jsContext.h:
	* X3DJavaScriptContext.cpp:
	* jsContext.cpp:
	* X3DGroupingNode.cpp: 

2014-06-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* X3DBase.h:
	* V8.h:
	* X3DObject.h:
	* Console.h:
	* V8.cpp:
	* X3DConstants.h:
	* Console.cpp:
	* X3DBrowser.h:
	* v8String.h:
	* v8Fields.h:
	* v8Globals.h:
	* SpiderMonkey.h:
	* v8Browser.h:
	* v8Context.h:
	* v8X3DField.h:
	* v8Browser.cpp:
	* v8X3DObject.h:
	* SpiderMonkey.cpp:
	* v8Globals.cpp:
	* v8Context.cpp:
	* v8SFVec4.h:
	* v8SFVec4.cpp:
	* jsContext.h:
	* v8X3DFieldDefinition.h:
	* jsContext.cpp:
	* X3DScriptingContext.h:
	* X3DScriptingContext.cpp: 

2014-06-04  Holger Seelig  <holger.seelig@yahoo.de>

	* v8Context.h:
	* v8Context.cpp:
	* jsContext.h:
	* jsContext.cpp: 

2014-06-03  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* v8Context.h:
	* v8X3DField.h:
	* v8Globals.cpp:
	* v8Browser.cpp:
	* v8X3DObject.h:
	* v8Context.cpp:
	* v8ObjectType.h:
	* v8SFVec4.h:
	* v8SFVec4.cpp:
	* v8X3DFieldDefinition.h: 

2014-06-03  Holger Seelig  <holger.seelig@yahoo.de>

	* v8Context.h:
	* v8Context.cpp:
	* v8X3DObject.h:
	* v8Browser.cpp:
	* v8Globals.cpp:
	* v8SFVec4.h:
	* v8SFVec4.cpp: 

2014-06-03  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* v8Context.h:
	* v8X3DObject.h:
	* v8Context.cpp:
	* v8ObjectType.h:
	* v8SFVec4.h: 

2014-06-03  Holger Seelig  <holger.seelig@yahoo.de>

	* v8X3DField.h:
	* v8X3DObject.h:
	* v8SFVec4.h:
	* v8SFVec4.cpp:
	* v8X3DFieldDefinition.h: 

2014-06-03  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* v8Context.h:
	* v8X3DField.h:
	* v8Browser.cpp:
	* v8Context.cpp:
	* v8Globals.cpp:
	* v8X3DObject.h:
	* v8SFVec4.h:
	* jsContext.h: